<resources>
    <string name="connectionStatusLabel">Status server:</string>
    <string name="connectionStatus">connection REFUSED</string>
    <string name="bois">1kg de bois\n 0,28 €</string>
    <string name="fer">1kg de fer\n 0,084 €</string>
    <string name="aluminium">1kg de aluminium\n 1,578 €</string>
    <string name="or">1kg de or\n 48000 €</string>

    <string name="app_name">CashManager</string>
    <string name="hello_world">HelloWorld</string>
    <string name="authTitle">Authentication</string>
    <string name="authServerId">Server ID</string>
    <string name="authServerPassword">Server Password</string>
    <string name="authSubmit">Submit</string>
    <string name="activity2">Activity2</string>
    <string name="testColor">Select your favorite color</string>
    <string name="preference_title">preference title</string>
    <string name="preference_summary">preference summary</string>
    <string name="preference_status">refused</string>
    <string name="connected_status">refused</string>
    <string name="articleName">article\'s name</string>
    <string name="articlePrice">article\'s price</string>
    <string name="addArticle">Add</string>
    <string name="cashRegister">Cash Register</string>
    <string name="cashRegisterAccess">Pass</string>
    <string name="removeArticleButton">Remove</string>
    <string name="registerTitle">Register Article</string>
    <string name="articleNameLabel">Label</string>
    <string name="articlePriceLabel">Price</string>
    <string name="outOfConnection">Out of connection</string>
    <string name="connectionStateLabel">Connection state</string>
    <string name="totalPriceLabel">TOTAL</string>
    <string name="euro">€</string>
    <string name="totalPrice">0</string>
    <string name="billTitle">Recap Bill</string>
    <string name="paymentReference">Payment Reference</string>
    <string name="paymentStatus">Payment Status</string>
    <string name="paymentTitle">Proceed to the payment</string>
    <string name="paymentMode">Payment mode</string>
    <string name="paymentProceed">pay now</string>

    <string name="hint_your_message">my message</string>
    <string name="label_your_message">my label message</string>
    <string name="title_btn_set">My btn set</string>
    <string name="messageReceive">Empty message</string>
    <string name="receiveTitle">NFC Reader</string>
    <string name="nfc">NFC</string>
    <string name="cameraPreviewLabel">Please focus on QR code</string>
    <string name="scanQR">Scan QR</string>
    <string name="generator">generator</string>
    <string name="paymentModeLabel">Payment mode :</string>
    <string name="qrcode">QR code</string>
    <string name="paymentStatusLabel">Payment status :</string>
    <string name="paymentRest">Left to pay :</string>

    <string name="authUserLogin">Login</string>
    <string name="authUserPassword">Password</string>
    <string name="paymentWaiting">Waiting for payment...</string>
    <string name="ipserver">IP server</string>
    <string name="nfc_disabled">Your nfc is disabled, change payment mode...</string>
</resources>
