<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            style="@style/MyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/authTitle"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Server ID"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Server password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ButtonSubmitLogin"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/authSubmit"/>

        <Button
            android:id="@+id/secondView"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accessSecondView"
            android:text="@string/cashRegisterAccess"/>

        <Button
            android:id="@+id/generatorView"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accessGenerator"
            android:text="@string/generator"/>
    </LinearLayout>

    <TextView
        android:id="@+id/connectionState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/authUserLogin"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>